# FinCraftr

./: .gitignore  CMakeLists.txt  DUAL_DISTRIBUTION_SUMMARY.md  EXAMPLES.md  LICENSE  MANIFEST.in  README.md  example_usage.cpp  example_usage.py  pyproject.toml  quick_test.sh  setup.cfg  setup.py  test_build.py  vcpkg.json
.github/workflows/: ci.yml  release.yml
cmake/: fincraftrConfig.cmake.in
cpp/: example_usage.cpp
cpp/include/fincraftr/equity/: basic.hpp  index.hpp  profit.hpp  returns.hpp  valuation.hpp
cpp/include/fincraftr/forwards/: pricing.hpp
cpp/include/fincraftr/options/: binomial.hpp  parity.hpp  payoff.hpp  profit.hpp
cpp/include/fincraftr/rates/: compounding.hpp  conversions.hpp  discount.hpp
cpp/pricing/interest/: discount.cpp
python/: example_usage.py
python/bindings/: main.cpp
python/fincraftr/: __init__.py
python/fincraftr/equity/: basic.py  index.py  profit.py  returns.py  valuation.py
python/fincraftr/forwards/: pricing.py
python/fincraftr/options/: binomial.py  parity.py  payoff.py  profit.py
python/fincraftr/rates/: compounding.py  conversions.py  discount.py
python/pricing/interest/: discount.py
