[metadata]
name = fincraftr
version = 1.0.0
author = FinCraftr Contributors
author_email = 
description = FinCraftr - A bilingual quantitative finance toolkit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your-username/fincraftr
project_urls =
    Bug Tracker = https://github.com/your-username/fincraftr/issues
    Documentation = https://fincraftr.readthedocs.io/
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Office/Business :: Financial
    Topic :: Scientific/Engineering :: Mathematics

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.19.0

[options.extras_require]
dev = 
    pytest>=6.0
    pytest-cov
    black
    isort
    flake8
docs =
    sphinx
    sphinx-rtd-theme
    myst-parser

[flake8]
max-line-length = 88
extend-ignore = E203, W503
